# lmorbits

./: .dockerignore  .gitbook.yaml  .gitignore  .gitmodules  .pre-commit-config.yaml  .skyignore  Makefile  Makefile_old  README.md  Taskfile.yml  application.code-workspace  data.code-workspace  ml.Dockerfile  ml.code-workspace  orchestration.Dockerfile  orchestration.code-workspace  pyproject.toml  serve.code-workspace  skypilot.yaml
docs/: Get Started.md  README.md  SUMMARY.md  architecture.md  prompt.txt
docs/application/: installation.md
docs/components/: data-pipeline.md  ml-pipeline.md
docs/deployment/: deployment-guide.md  monitoring.md
docs/development/: code-standards.md
docs/development/data/: introduction.md
docs/development/ml/: introduction.md
docs/development/orchestration/: introduction.md
docs/development/serve/: introduction.md
docs/getting-started/: app.md  iac.md  infrastructure.md  installation.md  quickstart.md
docs/how-to/development/: README.md  ml.md
docs/how-to/development/APPLICATION/: README.md
docs/how-to/development/DATA/: README.md
docs/how-to/development/ML/: README.md
docs/how-to/development/ORCHESTRATION/: README.md
docs/how-to/development/SERVE/: README.md
docs/how-to/development/application/: README.md
docs/how-to/development/iac/: README.md
docs/how-to/development/infra/: README.md
docs/how-to/development/infra/cloud/: README.md
docs/how-to/development/infra/local/: README.md
docs/how-to/development/lmorbits/: README.md
docs/how-to/development/lmorbits/APP/: README.md
docs/how-to/development/lmorbits/APP/Python/VECTORDB/: README.md
docs/how-to/development/lmorbits/APP/TS/TOOLS/: README.md
docs/how-to/development/lmorbits/APP/WORKFLOWS/: README.md
docs/how-to/development/lmorbits/DATA/: README.md
docs/how-to/development/lmorbits/ML/: README.md
docs/how-to/development/lmorbits/ORCHESTRATION/: README.md
docs/how-to/development/lmorbits/app/: serve.md
docs/how-to/development/lmorbits/app/typescript/: README.md
docs/introduction/: README.md
docs/maturity/: 1.md  2.md  3.md  5.md  README.md
scripts/llamcpp/mlflowModelRegistery/: llamacpp.py  main.py  pyproject.toml
workspaces/: application-orchestration.code-workspace  application.code-workspace  data-orchestration.code-workspace  data.code-workspace  infra-docs.code-workspace  ml-orchestration.code-workspace  ml.code-workspace  orchestration.code-workspace  serve.code-workspace
