[project]
name = "slmops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "go-task-bin>=3.41.0",
  "omegaconf>=2.3.0",
  "uv>=0.5.18",
  "zenml[connectors-gcp]==0.71.0",
]



[tool.uv.sources]
ml = { path = "packages/ml" }
application = { path = "packages/application"}
data = { path = "packages/data"}
orchestration = { path = "packages/orchestration" }
serve = { path = "packages/serve" }

[dependency-groups]
serve-package = [
    "serve",
]

orchestration-package = [
    "orchestration",
]

not-ml-dev = [
    "application",
    "data",
    "orchestration",
    "ipykernel>=6.29.5",
]

data-nl-package = [
    "data[nlp]",
]

ml-package = [
    "ml",
]

app-package = [
    "application",
]

all-dev = [
    "application",
    "data",
    "ipykernel>=6.29.5",
    "ml",
    "orchestration",
]

all-package = [
    "application",
    "data",
    "ml",
    "orchestration",
]
